# privicyagentbackend

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
.idx/: dev.nix
agents/: facts_checker_agent.py  legal_agent.py  websearch_agent.py
scripts/: aicommit.py
src/privicyagentbackend/: __init__.py
utils/: prompts.py
