[project]
name = "privicyagentbackend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sav.accharya", email = "sav.accharya@gmail.com" }
]
dependencies = [
    "autopep8>=2.3.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "langchain>=0.3.13",
    "phidata>=2.7.5",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "google-search-results>=2.4.2",
    "faiss-cpu>=1.9.0.post1",
    "spacy>=3.8.3",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/privicyagentbackend"]
